# fscl-xmock-c

./: README.md  meson.build
.github/: ISSUE_TEMPLATE.md
.github/workflows/: cd_docker.yml  ci_host_tester.yaml  ci_proj_builder.yaml
code/include/fossil/: xmock.h
code/include/fossil/xmock/: behavior.h  fake.h  inject.h  output.h  spy.h  stub.h
code/include/trilobite/: module.h  xmock.h
code/include/trilobite/xmock/: behavior.h  fake.h  inject.h  output.h  spy.h  stub.h
code/source/: behavior.c  fake.c  inject.c  meson.build  module.c  output.c  spy.c  stub.c
demo/: demo_behavior.c  demo_fake.c  demo_inject.c  demo_output.c  demo_prog.c  demo_spy.c  demo_stub.c  meson.build
subprojects/: trilo-xtest-c.wrap
test/: meson.build  xtest_behavior.c  xtest_cases.c  xtest_fake.c  xtest_inject.c  xtest_output.c  xtest_spy.c  xtest_stub.c  xunit_runner.c
wrapfile/: trilo-xmock-c.wrap
